Rename the project to chiptrack

--- a/pkg/index.html
+++ b/pkg/index.html
@@ -51,7 +51,7 @@
 <body>
   <canvas id="canvas" width="640" height="480" unselectable="on"></canvas>
   <script type="module">
-    import init from './cooperator.js';
+    import init from './chiptrack.js';
     init();
   </script>
 </body>
