Fix the wasm build
Also reactivate the instrument IDs as using
unicode monochrome geometry characters do seem to work.

--- a/pkg/index.html
+++ b/pkg/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>SixtyFPS UI Piano Demo (Web Assembly version)</title>
+  <title>Chiptrack (Web Assembly version)</title>
   <style>
     body {
       -webkit-touch-callout: none;
