--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to the latest version</title>
-<meta http-equiv="refresh" content="0; URL=https://jturcotte.github.io/chiptrack/v0.2">
-<link rel="canonical" href="https://jturcotte.github.io/chiptrack/v0.2">
+<meta http-equiv="refresh"
+    content="5; URL=https://jturcotte.github.io/chiptrack/v0.3/?gist=jturcotte/3adba9f9cddaf60ad1cacf41027b10a5">
+<link rel="canonical"
+    href="https://jturcotte.github.io/chiptrack/v0.3/?gist=jturcotte/3adba9f9cddaf60ad1cacf41027b10a5">
+<script>document.location.replace("https://jturcotte.github.io/chiptrack/v0.3/?gist=jturcotte/3adba9f9cddaf60ad1cacf41027b10a5")</script>
